--- a/styles/partials/regions/_header.scss
+++ b/styles/partials/regions/_header.scss
@@ -129,7 +129,7 @@ nav {
         @include rem('margin-top', 7.9rem);
         margin-top:25vw;
     }
-    z-index: 1;
+    z-index: -2;
     padding: 0;
     font-size: 62%;
     font-size: 3vw;
